--- a/package.json
+++ b/package.json
@@ -1,55 +1,78 @@
 {
-  "name": "vue-project",
-  "version": "1.0.0",
+  "name": "vue-project-template",
+  "version": "1.0.1",
   "description": "",
-  "private": true,
+  "main": "lib/index",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "vendor": "webpack --config webpack.vendor.js --progress",
-    "build": "webpack --config webpack.prod.js --progress"
+    "vendor": "webpack --config build/webpack.vendor.js --progress",
+    "dev": "webpack-dev-server --config build/webpack.dev.js",
+    "build": "webpack --config build/webpack.build.js --progress",
+    "build:analyse": "cross-env analyse=true webpack --config build/webpack.build.js --progress",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
-    "url": "https://zhaochen@git.dev.yuanben.org/scm/pms/yuanben-hot-analysis.git"
+    "url": "git+https://github.com/gitzhaochen/vue-project-template.git"
   },
-  "author": "Allen",
-  "license": "ISC",
+  "author": "zhaochen",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/gitzhaochen/vue-project-template/issues"
+  },
+  "homepage": "https://github.com/gitzhaochen/vue-project-template#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "axios": "^0.18.0",
-    "dayjs": "^1.7.7",
-    "element-ui": "^2.4.9",
-    "jquery": "^3.3.1",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "@babel/runtime": "^7.7.7",
+    "@babel/runtime-corejs3": "^7.6.0",
+    "allen-ui": "^1.0.1",
+    "axios": "^0.19.0",
+    "core-js": "^3.2.1",
+    "element-ui": "^2.13.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "autoprefixer": "^9.3.1",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.1",
-    "file-loader": "^2.0.0",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-component": "^1.1.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "style-resources-loader": "^1.2.1",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.24.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "terser-webpack-plugin": "^2.1.0",
+    "url-loader": "^3.0.0",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.40.2",
+    "webpack-bundle-analyzer": "^3.5.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2"
   }
 }
